tests/baselines/reference/contextuallyTypingOrOperator2(strict=true).errors.txt
contextuallyTypingOrOperator2.ts(3,47): error TS7006: Parameter 's' implicitly has an 'any' type.


==== contextuallyTypingOrOperator2.ts (1 errors) ====
    var v: { a: (_: string) => number } = { a: s => s.length } || { a: s => 1 };
    
    var v2 = (s: string) => s.length || function (s) { s.aaa };
                                                  ~
!!! error TS7006: Parameter 's' implicitly has an 'any' type.